# djify

./: .gitignore  LICENSE  Makefile  README.md  default.nix  devx.nix  flake.nix  kind-config.yaml  pyproject.toml  shell.nix
config/: k3s-registries.yaml
controller/: main.py  requirements.txt
controller/handlers/: app.py  build.py  deploy.py
crds/: apps.djify.io.yaml
deploy/: buildkitd.yaml  namespace.yaml  rbac.yaml  registry.yaml  webui.yaml
examples/: sample-app.yaml  sample2.yaml  sample3.yaml  sample4.yaml  sample5.yaml  sample6.yaml  sample7.yaml
registry-configs/registry.djify-system.svc.cluster.local:5000/: hosts.toml
webui/: go.mod  main.go
webui/handlers/: app.go  apps.go  create.go  delete.go
webui/k8s/: client.go
webui/static/: style.css
webui/templates/: base.html  create.html  detail.html  index.html
