[project]
name = "djify"
version = "0.1.0"
description = "Kubernetes-native operator — builds and deploys apps from Git repos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kopf==1.37.2",
    "kubernetes>=29.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools]
packages = []

[tool.uv]
package = false
